<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rounded_b_corners"
        android:backgroundTint="?attr/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/header"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rounded_b_corners"
            android:backgroundTint="?attr/colorPrimaryVariant" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="550dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="?attr/colorPrimary"
        android:gravity="center"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <View
            android:id="@+id/icone"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:background="@drawable/gasstationrounded"
            android:backgroundTint="?attr/colorOnSecondary" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icone"
            android:layout_marginBottom="25dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/alcool_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo"
            android:autofillHints="no"
            android:hint="@string/alcool_label"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/gasolina_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/alcool_label"
            android:autofillHints="no"
            android:hint="@string/gasolina_label"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <LinearLayout
            android:id="@+id/proporcao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gasolina_label"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/switch75"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toggleSwitch"
                style="@style/SwitchCompatTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/switch70"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/proporcao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="32sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>